--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==22.10.0
 click==8.1.3
 colorama==0.4.5
 Django==4.1.2
+django-crispy-forms==1.14.0
 isort==5.10.1
 mypy-extensions==0.4.3
 pathspec==0.10.1
